[gd_scene load_steps=11 format=3 uid="uid://b38p6p4m7hoch"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_p8tws"]
[ext_resource type="PackedScene" uid="uid://d2yhsx83qvjan" path="res://objects/humand/woman.tscn" id="3_o0st6"]
[ext_resource type="PackedScene" uid="uid://dahp5ue2jeouo" path="res://objects/player/death_model.tscn" id="4_pttgp"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_hju28"]
sky_top_color = Color(0.576169, 0, 0.0927043, 1)
sky_horizon_color = Color(0.68543, 0.517261, 0.53376, 1)
ground_bottom_color = Color(0.165552, 0.0690448, 0.0423356, 1)
ground_horizon_color = Color(0.68543, 0.517261, 0.53376, 1)

[sub_resource type="Sky" id="Sky_xxbdt"]
sky_material = SubResource("ProceduralSkyMaterial_hju28")

[sub_resource type="Environment" id="Environment_0gt3l"]
background_mode = 2
sky = SubResource("Sky_xxbdt")
tonemap_mode = 2

[sub_resource type="Theme" id="Theme_7yf1o"]
Label/colors/font_color = Color(0.96, 0.2784, 0.2784, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0.00820202, 0.00820202, 0.00820202, 1)
Label/constants/shadow_offset_x = 0
Label/constants/shadow_offset_y = 6
Label/font_sizes/font_size = 72

[sub_resource type="Animation" id="Animation_3lgin"]
length = 0.001

[sub_resource type="Animation" id="Animation_dcvdk"]
resource_name = "loop"
length = 5.0
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5iepk"]
_data = {
"RESET": SubResource("Animation_3lgin"),
"loop": SubResource("Animation_dcvdk")
}

[node name="MainMenu" type="Node3D" node_paths=PackedStringArray("level_selector", "main_menu")]
script = ExtResource("1_p8tws")
level_selector = NodePath("CanvasLayer/Level Select")
main_menu = NodePath("CanvasLayer/Main Menu")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0gt3l")

[node name="woman" parent="." instance=ExtResource("3_o0st6")]
transform = Transform3D(0.215011, 0, -0.451409, 0, 0.5, 0, 0.451409, 0, 0.215011, 0, 1.43746, -2.77222)
current_animation = "Walk"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.195, 1.774, 0.61)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 53.0
offset_top = 57.0
offset_right = 443.0
offset_bottom = 156.0
theme = SubResource("Theme_7yf1o")
text = "DEATH JAM"

[node name="Level Select" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Level1" type="Button" parent="CanvasLayer/Level Select"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 342.0
offset_right = 182.0
offset_bottom = 396.0
grow_vertical = 0
text = "Level 1"

[node name="Level2" type="Button" parent="CanvasLayer/Level Select"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 407.0
offset_right = 182.0
offset_bottom = 461.0
grow_vertical = 0
text = "Level 2"

[node name="Level3" type="Button" parent="CanvasLayer/Level Select"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 473.0
offset_right = 182.0
offset_bottom = 527.0
grow_vertical = 0
text = "Level 3"

[node name="Exit2" type="Button" parent="CanvasLayer/Level Select"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 538.0
offset_right = 182.0
offset_bottom = 592.0
grow_vertical = 0
text = "Back
"

[node name="Main Menu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartGame" type="Button" parent="CanvasLayer/Main Menu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 407.0
offset_right = 182.0
offset_bottom = 461.0
grow_vertical = 0
text = "Start Game"

[node name="Select Level" type="Button" parent="CanvasLayer/Main Menu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 473.0
offset_right = 182.0
offset_bottom = 527.0
grow_vertical = 0
text = "Select Level"

[node name="Exit" type="Button" parent="CanvasLayer/Main Menu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 538.0
offset_right = 182.0
offset_bottom = 592.0
grow_vertical = 0
text = "Quit
"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.77833, 14.7559)

[node name="death" parent="." instance=ExtResource("4_pttgp")]
transform = Transform3D(0.166212, 0, -0.471565, 0, 0.5, 0, 0.471565, 0, 0.166212, 1.89411, 1.92596, -2.9221)
current_animation = "Walk_scythe"
reset_animation = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5iepk")
}

[connection signal="pressed" from="CanvasLayer/Level Select/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Level Select/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Level Select/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Level Select/Exit2" to="." method="_on_exit_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Main Menu/StartGame" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Main Menu/Select Level" to="." method="_on_select_level_pressed"]
[connection signal="pressed" from="CanvasLayer/Main Menu/Exit" to="." method="_on_exit_pressed"]
